fixed overflow scroll bug

--- a/src/routes/listPage/ListPage.scss
+++ b/src/routes/listPage/ListPage.scss
@@ -2,28 +2,46 @@
 
 .listPage {
   display: flex;
-  height: 100%;
+  height: 100vh; // Ensure this container takes full viewport height
+  overflow: hidden; // Prevent overflow on this container
 
   .listContainer {
     flex: 3;
-    height: 100%;
+    height: 100%; // Ensure this container takes full height of the parent
+    overflow: hidden; // Prevent overflow on this container
 
-    .wrapper{
-      height: 100%;
+    .wrapper {
+      height: 100%; // Ensure this container takes full height of the parent
       padding-right: 50px;
       display: flex;
       flex-direction: column;
       gap: 50px;
-      overflow-y: scroll;
-      padding-bottom: 50px;
+      overflow-y: auto; // Allow vertical scrolling
+      padding-bottom: 70px;
+
+      /* Hide scrollbar for WebKit-based browsers */
+      &::-webkit-scrollbar {
+        width: 0;
+        height: 0;
+      }
+
+      /* Hide scrollbar for Firefox */
+      scrollbar-width: none; /* For Firefox */
+      -ms-overflow-style: none; /* For Internet Explorer and Edge */
+
+      /* Adding margin-bottom to the last card */
+      .card:last-child {
+        margin-bottom: 50px; /* Adjust this value as needed */
+      }
     }
   }
+
   .mapContainer {
     flex: 2;
-    height: 100%;
+    height: 100%; // Ensure this container takes full height of the parent
     background-color: #fcf5f3;
 
-    @include md{
+    @include md {
       display: none;
     }
   }
